# DirLink

./: .gitignore  PKGBUILD  README.md  build.py  pyproject.toml
src/dirlink/: cli.py  data_manager.py  link_manager.py  log.py  path_data.py
src/dirlink-1.0.1/: PKG-INFO
src/dirlink-1.0.1/src/dirlink/: cli.py  link_manager.py
src/dirlink.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
