[project]
name = "dirlink"
version = "1.0.0a1"
description = "An Easy To Use Terminal Tool To Speed Up Your Directory Navigation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["termcolor", "platformdirs"]

[project.scripts]
dirlink = "dirlink.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

