[project]
name = "dirlink"
version = "1.0.0a1"
description = "An Easy To Use Terminal Tool To Speed Up Your Directory Navigation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["termcolor", "platformdirs"]

[project.scripts]
dirlink = "dirlink.cli:main"
DLink = "dirlink.cli:main"
dl = "dirlink.cli:main"

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
